# Hotels-TSP-Tensor-QUDO

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES  install.bat  install.sh  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml
docs/: analysis_and_figures.md  api_reference.md  architecture.md  configuration.md  data_analysis.md  development.md  experiments_design_and_artifacts.md  extending_quantum_solvers.md  formulations.md  parallel_workers_general_workloads.md  parallelism_and_vectorization.md  repository_guide.md  reproducing_results_from_scratch.md
output/T0sampling/: t0_estimate_20260322_163021.json  t0_estimate_20260322_163146.json  t0_estimate_20260322_163325.json  t0_estimate_20260322_163942.json
output/lambdasSampling/: lambda_grid_20260322_170436.json  lambda_grid_20260322_170447.json  lambda_grid_20260322_170915.json
scripts/: make.bat  makefile  remove_zone_identifiers.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/data_analysis/: __init__.py  _deps.py  _plot_typography.py  angles_stats.py  benchmark_plots.py  energy_plots.py  extended_plots.py  ingest.py  instance_features.py  metrics.py  optimal_sample_mass.py  output_paths.py  pipeline.py  plot.py  prepare_plots.py  records.py  scan.py
src/data_analysis/benchmark/: __init__.py  collectors.py  common.py  figures.py  pairing.py  plot_serde.py  run.py
src/experiments/: __init__.py  cudaq_parallel.py  estimate_lambdas.py  estimate_t0.py  experiment_brute_force_n5_qubo.yaml  experiment_brute_force_n5_tqudo.yaml  experiment_cirq_n5_tqudo.yaml  experiment_cudaq_n5_qubo.yaml  experiment_cudaq_n5_tqudo.yaml  experiment_cudaq_n9_tqudo.yaml  experiment_sa_n5_qubo.yaml  experiment_sa_n5_tqudo.yaml  experiment_sa_n6_qubo.yaml  experiment_sa_n6_tqudo.yaml  instance_generation_config.yaml  json_serialize.py  main_experiment_workflow.py  parallel_solve_batch.py  workflow_io.py
src/instance_gen_process/: __init__.py  config.yaml  config_loader.py  generator.py  models.py  solver_config.yaml  solver_config_loader.py  solver_config_parse.py  solver_run_config_map.py  solver_validation.py
src/instance_generator/: config.yaml
src/math_utils/: __init__.py  qubo_ising.py
src/solvers/: __init__.py  _qaoa_base.py  base.py  noise.py
src/solvers/brute_force/: __init__.py  limits.py  solver.py
src/solvers/cirq_solver/: __init__.py  noise_model.py  qaoa_circuit_qubo.py  qaoa_circuit_tqudo.py  qaoa_circuit_tqudo_qubit_emulation.py  qudit_noise_channels.py  solver.py
src/solvers/cudaq_solver/: __init__.py  cudaq_target.py  noise_model.py  qaoa_circuit_qubo.py  qaoa_circuit_tqudo.py  solver.py
src/solvers/simulated_annealing/: __init__.py  initial_temperature.py  solver.py
src/streamlit_app/: __init__.py  app.py
src/utils/: __init__.py  constraints.py  cooperative_stop.py  costs.py  costs_batch.py  experiment_paths.py  experiment_serialize.py  json_serialize.py  logging_utils.py  native_stderr.py  optimizer.py  output_paths.py  progress.py  qaoa_helpers.py  yaml_tools.py
tests/: conftest.py  oracles.py  test_brute_force_solver.py  test_cirq_tqudo.py  test_constraints.py  test_costs.py  test_costs_batch_qaoa_parity.py  test_cudaq_endianness.py  test_cudaq_parallel.py  test_cudaq_target.py  test_cudaq_tqudo.py  test_data_analysis.py  test_estimate_lambdas.py  test_histogram_energy_metrics.py  test_imports.py  test_initial_temperature.py  test_instance_config.py  test_native_stderr.py  test_noise_models.py  test_optimizer.py  test_qubo_to_ising.py  test_qubo_tqudo_generation.py  test_settings.py  test_solver_config.py  test_solver_contracts.py  test_streamlit_app.py  test_tqudo_naive_oracle.py  test_workflow_io.py
webpage_results/: curves.html  extras.html  figures.html  index.html  paired.html  summary.html
webpage_results/css/: style.css
webpage_results/js/: config.js  curves.js  data.js  extras.js  figures.js  home.js  nav.js  paired.js  summary.js
