[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aricraft-loading-problem-t-qudo"
version = "0.1.0"
description = "Aircraft loading optimization using QUBO and quantum computing (Cirq, CUDA-Q)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = []
keywords = ["quantum", "optimization", "QUBO", "aircraft", "loading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.28.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "cirq>=1.3.0",
    # "nvidia-cudaq",  # Uncomment when using NVIDIA GPU; install separately
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]


[project.urls]
Repository = ""

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
# Note: cirq and cudaq subdirs may shadow real packages if installed as top-level.
# Use "from src.cirq import ..." or rename to cirq_backend/cudaq_backend to avoid.

[tool.ruff]
line-length = 100
target-version = "py310"
