[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hotels-TSP-Tensor-QUDO"
version = "0.1.0"
description = "Travel routing optimization with precedence constraints using Tensor-QUDO and quantum-inspired solvers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Adriano Lusso" },
    { name = "Alejandro Mata Ali" },
]
keywords = ["quantum", "optimization", "QUBO", "QUDO", "TSP", "travel", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]
cirq = [
    "cirq>=1.3.0",
    "scipy>=1.10.0",
]
cudaq = [
    # Basic GPU support (single GPU). Multi-GPU requires Conda + MPI separately.
    "cudaq>=0.8.0",
]
ui = [
    "streamlit>=1.28.0",
]
all = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "cirq>=1.3.0",
    "streamlit>=1.28.0",
]


[project.urls]
Repository = "https://github.com/DOKOS-TAYOS/hotels-tsp-tensor-qudo"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "config*",
    "data_analysis*",
    "experiments*",
    "instance_gen_process*",
    "math_utils*",
    "solvers*",
    "streamlit_app*",
    "utils*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["pytest-cache-files-*", ".tmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
